--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <br>
   <h4 style="color: #DDD;">Lemon's Extension Gallery is not affiliated with TurboWarp, Scratch, The Scratch Team, or the Scratch Foundation.</h4>
   <script src="builder.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
