--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="favicon/favicon.png" type="image/x-icon" />
   <meta content="Lemon's Extension Gallery" property="og:title" />
-  <meta content="A list of extensions for TurboWarp " property="og:description" />
+  <meta content="An extension gallery for TurboWarp." property="og:description" />
   <meta content="https://bludisanlemon.github.io/lemons-gallery" property="og:url" />
   <meta content="https://bludisanlemon.github.io/lemons-gallery/favicon/favicon.png" property="og:image" />
   <meta content="#FFE95E" data-react-helmet="true" name="theme-color" />
